Expand deleting functionality, add util classes
Add Deletable interface. Now only soft delete available. Add convenient util classes to centralize validation checks. Add convenient Matcher class for tests.