@@ -10,12 +10,13 @@ import org.springframework.web.bind.annotation.RestController;
 import ru.javaops.restaurantvoting.model.Dish;
 import ru.javaops.restaurantvoting.service.DishService;
 import ru.javaops.restaurantvoting.util.Views.Public;
-import ru.javaops.restaurantvoting.util.validation.restaurant.AvailableRestaurant;
+import ru.javaops.restaurantvoting.util.validation.restaurant.ValidRestaurant;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
+import static ru.javaops.restaurantvoting.util.DishUtil.checkDishDeleted;
+import static ru.javaops.restaurantvoting.util.DishUtil.checkDishExists;
 import static ru.javaops.restaurantvoting.web.UrlData.API;
 import static ru.javaops.restaurantvoting.web.UrlData.DISHES;
 
@@ -31,18 +32,21 @@ public class DishController {
 
     @GetMapping
     @JsonView(Public.class)
-    public List<Dish> getAllFromRestaurant(@PathVariable @AvailableRestaurant int restaurantId) {
+    public List<Dish> getAllFromRestaurant(@PathVariable @ValidRestaurant Long restaurantId) {
         log.info("get all from restaurant {}", restaurantId);
         return dishService.getAllFromRestaurant(restaurantId).values().stream()
-                .takeWhile(Dish::isEnabled)
-                .collect(Collectors.toList());
+                .takeWhile(d -> !d.isDeleted())
+                .toList();
     }
 
     @GetMapping("/{id}")
     @JsonView(Public.class)
-    public Dish getFromRestaurant(@PathVariable @AvailableRestaurant int restaurantId, @PathVariable int id) {
+    public Dish getFromRestaurant(@PathVariable @ValidRestaurant Long restaurantId, @PathVariable Long id) {
         log.info("get {} from restaurant {}", id, restaurantId);
-        return dishService.getFromRestaurant(restaurantId, id);
+        Dish dish = dishService.getAllFromRestaurant(restaurantId).get(id);
+        checkDishExists(dish, restaurantId, id);
+        checkDishDeleted(dish, restaurantId, id);
+        return dish;
     }
 
 }
